# bare-nextion

./: .gitmodules  CMakeLists.txt  README.md  doxygen.conf  main.c  startup.c  startup.s
include/: nextion.h  nx4832t035.h  queue.h  uart.h
src/: nextion.c  nx4832t035.c  queue.c  uart.c
